--- a/apps/astro/src/components/global/Partnership.astro
+++ b/apps/astro/src/components/global/Partnership.astro
@@ -9,6 +9,7 @@ export const Partnership_Query = /* groq */ `
     ${PortableTextQuery('paragraph')}
     logos[] {
       ${ImageDataQuery('img')}
+      name,
       href
     },
     sectionId,
