--- a/apps/astro/src/components/global/Header.astro
+++ b/apps/astro/src/components/global/Header.astro
@@ -3,9 +3,10 @@ import Button, { type ButtonDataProps } from '@components/ui/Button'
 
 type Props = {
   nav_cta: ButtonDataProps
+  tel?: string
 }
 
-const { nav_cta } = Astro.props
+const { nav_cta, tel } = Astro.props
 ---
 
 <header>
@@ -20,7 +21,25 @@ const { nav_cta } = Astro.props
           </path>
         </svg>
       </a>
-      <Button {...nav_cta} className="cta" data-track-header-cta />
+      <div class="wrapper">
+        <Button {...nav_cta} className="cta" />
+        {
+          tel && (
+            <a href={`tel:${tel}`} class="tel">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 25">
+                <path
+                  stroke="#DEAD26"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M22.001 17.642v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.501 19.501 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67 2 2 0 0 1 1.99-2.18h3a2 2 0 0 1 2 1.72c.127.96.362 1.902.7 2.81a2 2 0 0 1-.45 2.11l-1.27 1.27a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.908.338 1.85.573 2.81.7a2 2 0 0 1 1.72 2.03Z"
+                />
+              </svg>
+              <span>{tel}</span>
+            </a>
+          )
+        }
+      </div>
     </nav>
   </div>
 </header>
@@ -36,9 +55,11 @@ const { nav_cta } = Astro.props
     nav {
       display: flex;
       justify-content: space-between;
+      gap: 2rem;
       align-items: center;
-      height: 4.5rem;
+      min-height: 4.5rem;
       .logo {
+        flex-shrink: 0;
         svg {
           display: block;
           @media (max-width: 31rem) {
@@ -47,8 +68,32 @@ const { nav_cta } = Astro.props
           }
         }
       }
-      .cta {
-        width: fit-content;
+      .wrapper {
+        padding: 0.5rem 0 0.75rem;
+        display: inline-flex;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 0.75rem 2rem;
+        .tel {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+          font-size: clamp(0.875rem, calc(1vw / 0.48), 1rem);
+          color: var(--primary-200, #f8eed3);
+          text-decoration: none;
+          transition: color 0.3s;
+          &:hover {
+            color: var(--primary-300, #e7c567);
+          }
+          svg {
+            width: 1.25rem;
+            height: 1.25rem;
+          }
+        }
+        .cta {
+          width: fit-content;
+        }
       }
     }
   }
