--- a/apps/astro/src/layouts/Layout.astro
+++ b/apps/astro/src/layouts/Layout.astro
@@ -7,12 +7,25 @@ import CookieConsent from '@components/global/CookieConsent.astro'
 import Header from '@components/global/Header.astro'
 import Footer from '@components/global/Footer.astro'
 import SmoothScroll from '@layouts/smooth-scroll.astro'
+import sanityFetch from '@utils/sanity.fetch'
 
 type Props = HeadProps & {
   nav_cta?: ComponentProps<typeof Header>['nav_cta']
 }
 
 const { nav_cta, ...props } = Astro.props
+
+const data = await sanityFetch<{ tel?: string, socials: { facebook: string, linkedin: string } }>({
+  query: `
+    *[_type == "global"][0] {
+      tel,
+      socials {
+        facebook,
+        linkedin,
+      },
+    }
+  `,
+})
 ---
 
 <!doctype html>
@@ -22,11 +35,11 @@ const { nav_cta, ...props } = Astro.props
   </head>
   <body>
     <CookieConsent />
-    {nav_cta && <Header nav_cta={nav_cta} />}
+    {nav_cta && <Header nav_cta={nav_cta} tel={data.tel} />}
     <main id="main">
       <slot />
     </main>
-    <Footer />
+    <Footer tel={data.tel} socials={data.socials} />
     <SmoothScroll />
   </body>
 </html>
