--- a/apps/astro/src/components/global/ContactForm/styles.module.scss
+++ b/apps/astro/src/components/global/ContactForm/styles.module.scss
@@ -25,20 +25,40 @@
     }
   }
 
+  .fadeInBlur {
+    animation: fadeInBlur 800ms cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
+  }
+  @keyframes fadeInBlur {
+    0% {
+      filter: blur(5px);
+    }
+    100% {
+      filter: blur(0);
+    }
+  }
+
   .pillSelector {
     display: flex;
     width: 100%;
     max-width: calc(200rem / 16);
     position: relative;
-    margin-bottom: calc(16rem / 16);
     border-radius: 2rem;
     background-color: var(--neutral-200);
     padding: calc(4rem / 16);
     height: calc(34rem / 16);
+    &.clientTypePills {
+      max-width: calc(300rem / 16);
+    }
     &[data-type='email']::after {
       transform: translateX(0);
     }
     &[data-type='phone']::after {
+      transform: translateX(calc(100% - 0.25rem));
+    }
+    &[data-type='individual']::after {
+      transform: translateX(0);
+    }
+    &[data-type='business']::after {
       transform: translateX(calc(100% - 0.25rem));
     }
     &::after {
