slightly changes placeholder color for Input

--- a/apps/astro/src/components/ui/Input/Input.module.scss
+++ b/apps/astro/src/components/ui/Input/Input.module.scss
@@ -28,7 +28,7 @@
       background: #ffe2de;
     }
     &::placeholder {
-      color: var(--neutral-500, #6f6f6f);
+      color: var(--neutral-400, #868585);
     }
   }
   input {
